--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -7,3 +7,5 @@ $accent-color: #2196f3;
 $white: #ffffff;
 
 $project-list-gap: 30px;
+
+$negative-list-gap: -30px;
